--- a/style/page_2.css
+++ b/style/page_2.css
@@ -12,6 +12,10 @@
 }
 
 .player_info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
     padding: 2em;
     border-radius: 15px;
     background-color: rgba(177, 231, 126, 0.836);
@@ -21,6 +25,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 200px;
+    width: 200px;
     background-color: rgba(233, 221, 179, 0.889);
     font-size: 1.3em;
     padding: 1em;
