--- a/style/game_info_page.css
+++ b/style/game_info_page.css
@@ -7,7 +7,17 @@
     border-radius: 10px;
     font-size: 1.1em;
 }
-/* das */
+
+.saved_games{
+    background-color: black;
+    color: white;
+    height: 30px;
+    width: 200px;
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: 1.1em;
+    margin: 5px 0;
+}
 
 .tables{
     display: flex;
@@ -23,14 +33,14 @@
 
 .table-data::-webkit-scrollbar {
     display: none;
-  }
+}
 
 .head{
     width: 100px;
     font-size: 1.5em;
 }
 
-.name, .time, .level{
+.name, .time, .level, .button{
     width: 100px;
     text-align: center;
 }
@@ -82,4 +92,59 @@
     background-color: rgb(231, 79, 79);
     top: 2px;
     left: 2px;
+}
+
+
+#save_game{
+    height: 40px;
+    width: 200px;
+    font-size: larger;
+    border: 0px;
+    border-radius: 15px;
+    cursor: pointer;
+    background-color: rgb(47, 150, 47);
+}
+
+#save_game:hover{
+    position: relative;
+    background-color: rgb(231, 79, 79);
+    top: 2px;
+    left: 2px;
+}
+
+.saved_tables{
+    padding: 2em;
+    display: none;
+    height: 300px;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.saved_table_heads{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.saved_data{
+    overflow: scroll;
+}
+
+.saved_data::-webkit-scrollbar {
+    display: none;
+}
+.resume{
+    cursor: pointer;
+    background-color: black;
+    color: aliceblue;
+    border-radius: 10px;
+}
+
+.status{
+    display: none;
+    font-size: larger;
+    font-weight: 900;
+    text-align: center;
+    color: green;
 }
