--- a/style/page_1.css
+++ b/style/page_1.css
@@ -1,17 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap');
 *{
     padding: 0;
     margin: 0;
     user-select: none;
     -webkit-user-drag: none;
+    font-family: 'Rubik Bubbles', cursive;
 }
 
 body{
     background-color: rgb(197, 197, 11);
     height: 100vh;
     width: 100vw;
-    font-family: 'Montserrat', sans-serif;
+
+
 }
 
 .page_1{
